add delete function in Admin Doggos page

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "aws-sdk": "^2.677.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
@@ -16,8 +17,11 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^11.0.1",
+    "react-dropzone-s3-uploader": "^1.1.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
+    "react-s3-uploader": "^4.9.2",
     "react-scripts": "^3.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
