--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
     "aws-sdk": "^2.677.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
