--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "aws-sdk": "^2.677.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
